# nave-challenge

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
nave/: .env-docker  asgi.py  settings.py  urls.py  wsgi.py
nave/api/: apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
nave/api/migrations/: 0001_initial.py  0002_naver_user.py  0003_auto_20200815_1402.py  0004_auto_20200815_1759.py  0005_auto_20200816_1806.py  0006_auto_20200816_1809.py  0007_auto_20200816_1811.py
nave/api/tests/: conftest.py  test_api_models.py  test_api_permissions.py  test_api_serializers.py  test_api_views.py  test_views.py
nave/core/: admin.py  apps.py  managers.py  models.py  serializers.py
nave/core/migrations/: 0001_initial.py
nave/core/tests/: test_core_forms.py  test_core_models.py  test_forms.py  test_models.py
nave/naver/: admin.py  apps.py  models.py  serializers.py
nave/naver/migrations/: 0001_initial.py  0002_naver_user.py  0003_auto_20200814_2337.py
nave/project/: models.py  serializers.py
nave/project/migrations/: 0001_initial.py
